app/assets/stylesheets/main.less
@import 'bootstrap.less';
@import 'bootstrap-responsive.less';
@import 'tag-colors.less';
@import 'vendor/progress-polyfill.less';

@color-background: white;
@color: black;
@color-subtle: #888;
@color-border: black;

body.document-set-show {
  margin: 0;
  padding: 0;
  width: 100%;
  overflow: hidden;

  h1 {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    margin: 0;
    padding: 0 1em;
    font-size: 1.6em;
    height: 1.25em;
    line-height: 1.25;
    border-bottom: 2px solid @color;
  }

  #main {
    position: absolute;
    top: 2em;
    margin-top: 2px;
    left: 0;
    right: 0;
    bottom: 1.5em;
    margin-bottom: 2px;
  }

  #document {
    position: absolute;
    right: 0;
    top: 0;
    bottom: 0;
    left: 50%;
    border-left: 1px solid @color-border;

    iframe {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      border: none;
      padding: 0;
      margin: 0;
    }
  }

  #focus {
    position: absolute;
    left: 0;
    right: 50%;
    top: 0;
    height: 5%;

    .handle {
      cursor: move;
    }
  }

  #tree {
    position: absolute;
    left: 0;
    right: 50%;
    top: 5%;
    height: 55%;
    border-bottom: 1px solid @color-border;
    overflow: hidden;

    .selected {
      color: blue;
    }
  }

  #terms-tags-documents {
    position: absolute;
    top: 60%;
    border-top: 1px solid @color-border;
    left: 0;
    bottom: 0;
    right: 50%;
  }

  #tag-list {
    ul {
      margin: 0;
      list-style: none;
    }

    li {
      vertical-align: middle;
    }

    form {
      margin-bottom: 0;
    }

    .tag-name {
      min-width: 3em;
      text-align: left;

      -webkit-border-top-right-radius: 4px;
              border-top-right-radius: 4px;
      -webkit-border-bottom-right-radius: 4px;
              border-bottom-right-radius: 4px;
      -moz-border-radius-topright: 4px;
      -moz-border-radius-bottomright: 4px;
    }

    .btn-group {
      & > .btn { z-index: 2; } // fixes :hover disappearing when z-index changes

      .tag-add, .tag-remove {
        position: absolute;
        padding: 4px 3px 4px;
        width: 12px;
        top: 0;
        right: 0;
        overflow: hidden;
        text-align: center;
        opacity: 0.01;
        // FIXME use Less CSS to do this
        -webkit-transition: opacity 0.3s ease;
           -moz-transition: opacity 0.3s ease;
            -ms-transition: opacity 0.3s ease;
             -o-transition: opacity 0.3s ease;
                transition: opacity 0.3s ease;
      }

      .tag-add {
        right: 18px;
      }

      &:hover {
        .tag-add, .tag-remove {
          opacity: 1;
        }
      }
    }
  }

  #document-list {
    overflow: auto;
    top: 2em;
    bottom: 0;
    left: 0;
    right: 0;

    ul {
      margin: 0;
      padding: 0;
      list-style: none;
    }

    li {
      margin: 0;
      padding: 0;
      list-style: none;

      &.placeholder {
        background: #eee;
        color: red;
      }
    }

    a {
      display: block;
      color: inherit;
      text-decoration: inherit;

      &:hover {
        background: #ddd;
      }

      &.selected {
        color: black;
        font-weight: bold;
      }
    }

    span.tags {
      span {
        display: inline-block;
        width: .7em;
        height: .7em;
        margin: 0 .25em;
        border: 1px solid gray;
      }
    }
  }

  footer {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height: 1.5em;
    line-height: 1.5;
    border-top: 2px solid @color;
    overflow: hidden;
    text-align: center;
  
    a {
      text-decoration: none;
      color: @color-subtle;
    }
  }
}

body.document-set-index {
  ul.document-sets {
    &>li {
      .well;

      &:not(:hover) {
        border-color: white;
        background-color: white;
        position: relative;
        -webkit-box-shadow: none;
           -moz-box-shadow: none;
                box-shadow: none;
      }
    }

    label {
      display: inline;
      margin: 0;
    }

    .state-description {
      .muted;
    }

    form.delete {
      float: right;
    }
  }
}

